[package]
name = "gameai"
version = "0.0.2"
description = "Library with various types of game ai for learning."
authors = ["Justin Cullen <jcullen@alum.mit.edu>"]
license = "MIT"

[dependencies]
bincode = ">=0.9.0"
clap = ">=2.0.0"
cpuprofiler = ">=0.0.3"
crossbeam = "0.3.0"
futures = ">=0.1.0"
futures-await = ">=0.1"
futures-timer = ">=0.1.1"
rand = ">=0.3.0"
rayon = ">=1.0.0"
rayon-futures = ">=0.1.0"
serde = "1.0"
serde_derive = "1.0"
evmap = ">=2.0.0"

[profile.release]
debug = true

